# quelle

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SKILL.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
app/: settings.py
app/cli/: main.py  output.py
app/models/: publication.py
app/repositories/: cache.py  errors.py  http_client.py  pdf_downloader.py
app/repositories/sources/: arxiv.py  crossref.py  openalex.py  scholar_fallback.py  semantic_scholar.py  unpaywall.py
app/services/: pdf_resolver.py  resolver.py
docs/: CNAME  commands.md  index.md  install.md  legal.md
docs/assets/stylesheets/: extra.css
quelle/: __init__.py  migrate.py  paths.py  settings.py
quelle/cli/: config.py  main.py  output.py
quelle/models/: publication.py
quelle/repositories/: cache.py  http_client.py  pdf_downloader.py
quelle/repositories/sources/: arxiv.py  crossref.py  openalex.py  semantic_scholar.py  unpaywall.py
quelle/services/: pdf_resolver.py  resolver.py
skills/publications/: SKILL.md
skills/quelle/: SKILL.md
tests/: conftest.py  test_arxiv_mapper.py  test_cache.py  test_cli_config.py  test_cli_smoke.py  test_crossref_mapper.py  test_merge_logic.py  test_migrate.py  test_openalex_mapper.py  test_paths.py  test_pdf_downloader.py  test_pdf_resolver.py  test_resolver.py  test_resolver_cache.py  test_scholar_fallback.py  test_semantic_scholar_mapper.py  test_unpaywall.py
