[project]
name = "publication-manager"
version = "0.1.0"
description = "Fetch academic publication metadata and PDFs from open sources (OpenAlex, Crossref, Semantic Scholar, arXiv, Unpaywall) and return normalised JSON"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alice Voland" }]
requires-python = ">=3.12"
dependencies = [
    "environs>=14.6.0",
    "httpx>=0.28",
    "rich>=13.9",
    "typer>=0.16",
]

[project.optional-dependencies]
scholar = ["scholarly>=1.7"]

[project.scripts]
publications = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105", "SIM117"]

[tool.ruff.lint.per-file-ignores]
# Typer's Option(...) default-arg pattern is idiomatic; B008 flags it.
"app/cli/main.py" = ["B008"]
